# firmatacpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/serial/: CMakeLists.txt
examples/: simple.cpp  simpleble.cpp
include/: firmata.h  firmata_constants.h  firmbase.h  firmble.h  firmextension.h  firmi2c.h  firmio.h  firmserial.h
src/: firmata.cpp  firmbase.cpp  firmble.cpp  firmi2c.cpp  firmserial.cpp
